syntax = "proto3";

import "motor/platform/platform.proto";
import "motor/providers/provider.proto";

package cnquery.motor.asset.v1;
option go_package = "go.mondoo.com/cnquery/motor/asset";

enum State {
  STATE_UNKNOWN = 0;
  // eg. permission or io error
  STATE_ERROR = 1;

  // run time states
  STATE_PENDING = 2;
  STATE_RUNNING = 3;
  STATE_STOPPING = 4;
  STATE_STOPPED = 5;
  STATE_SHUTDOWN = 6;
  STATE_TERMINATED = 7;
  STATE_REBOOT = 8;

  // static states
  STATE_ONLINE = 9;
  STATE_OFFLINE = 10;

  // the asset is marked as deleted
  STATE_DELETED = 11;
}

enum AssetCategory {
  CATEGORY_FLEET = 0;
  CATEGORY_CICD = 1;
}

message Asset {
  reserved 30;
  string id = 1;
  string mrn = 2;
  string name = 3;

  // 3rd-party platform id eg. amazon arn, gcp resource name or ssh host key
  repeated string platform_ids = 4;

  // asset state
  State state = 5;

  cnquery.motor.platform.v1.Platform platform = 6;

  // key is a lower case string of connection type
  repeated cnquery.motor.providers.v1.Config connections = 17;

  // labeled assets can be searched by labels
  map<string, string> labels = 18;

  // additional information that is not touched by the system
  map<string, string> annotations = 19;

  // additional options for that asset
  map<string, string> options = 20;

  // platform id detection mechanisms
  repeated string id_detector = 31;

  // indicator is this is a fleet asset or a CI/CD run
  AssetCategory category = 32;

  repeated Asset related_assets = 33;

  string managed_by = 34;

  // optional url that can be used to access the asset via a browser
  string url = 35;

  string kind_string = 36;
}
