// Copyright (c) Mondoo, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package mondoo.cnquery.upstream.v1;
option go_package = "go.mondoo.com/cnquery/v10/providers-sdk/v1/upstream";

message UpstreamConfig {
  string asset_mrn = 1;
  string space_mrn = 2;
  string api_endpoint = 3;
  bool incognito = 4;
  ServiceAccountCredentials creds = 5;
  string api_proxy = 6;
}

message ServiceAccountCredentials {
  string mrn = 1;
  string parent_mrn = 2;
  string private_key = 3;
  string certificate = 4;
  string api_endpoint = 5;
}

service AgentManager {
  // RegisterAgent registers a new managed agent
  rpc RegisterAgent(AgentRegistrationRequest) 
    returns (AgentRegistrationConfirmation);

  // UnRegister removes the managed agent from management
  rpc UnRegisterAgent(Mrn) returns (Confirmation);

  // Service Account Credential Test Endpoint
  rpc PingPong(Ping) returns (Pong);

  // Health Check for Managed Agents
  rpc HealthCheck(AgentInfo) returns (AgentCheckinResponse);
}

message Ping {

}

message Pong {

}

message AgentCheckinResponse {

}

message AgentRegistrationRequest {
  string token = 1;
  string name = 2;
  AgentInfo agent_info = 3;
}

message AgentInfo {
  string mrn = 1;
  string version = 2;
  string build = 3;
  string platform_name = 4;
  string platform_release = 5;
  string platform_arch = 6;
  string platform_ip = 7;
  string platform_hostname = 8;
  map<string, string> labels = 18;
  string platform_id = 20;
}

message AgentRegistrationConfirmation {
  string agent_mrn = 1;
  ServiceAccountCredentials credential = 2;
}

message Mrn { 
  string mrn = 1;
}

message Confirmation {
  string mrn = 1;
}

service SecureTokenService {
  rpc ExchangeSSH (ExchangeSSHKeyRequest) returns (ExchangeSSHKeyResponse) {}
}

message ExchangeSSHKeyRequest {
  Claims claims = 1;
  repeated SshSignature signatures = 2;
}

message ExchangeSSHKeyResponse {
  string mrn = 1;
  string parent_mrn = 2;
  string private_key = 3;
  string certificate = 4;
  string api_endpoint = 5;
}

// Claims follow https://datatracker.ietf.org/doc/html/rfc8693#section-2.1
message Claims {
  string subject = 1;
  // NumericDate as defined in RFC 7519, which uses RFC 3339
  string exp = 2;
  // NumericDate as defined in RFC 7519, which uses RFC 3339
  string iat = 3;
  string resource = 4;
}

message SshSignature {
  string alg = 1;
  string kid = 2;
  string sig = 3;
}